pl 16
	- read property ydirection and tieYDirection for tie direction.
	- bf: slur over rest.
	- bf: include path
	- part of jcn2
	- configure --enable-guile

pl 15.jcn1
 	- autoconf on mf,mfont mp,mpost
 
pl 15.am
	- Lots of patches from *Adrian* *Mariano*!

**********

pl 15
pl 14.hwn1
	- \lyrics iso \lyric (mudela 1.0.7)
	- cleaned up real_expression syntax.
	- removed optional_semicolon nonterminal after toplevel assignment
	- MInterval Music::time_int () -> Moment Music::duration ()
	- junked Music_iterator::daddy_iter_l_
	- junked Sequential_music::offset_mom_
	- tempo compression:
		* syntax: \times 2/3 Music
		* Compressed_music, Compressed_music_iterator
	- flower: init rational to 0
	- flower: removed P?Cursor<>::P?Cursor (), using pointer iso ref now.
	- don't install into TeX, but into ${datadir}/{mf,tex,ly} (todo: ps)


*********
pl 14

pl 13.uu1
	- syntax for \translator: (\name  "Name")
	- bfs for footer
	- bf: init/{book,center}-fragment.ly, YODL nofooter stuff. 
	- bf: redeclaration
	- bf: doc fixes
	- bfs: egcs 1.1

pl 13.mb1
	- bf: Lookup::afm_find, the width was undefined for the feta fonts.
	- bf: refman.yo

pl 13.jcn5
	- bf: init/paper* missing `;'
	- lilyponddefs.ps fixes
	- crude output name fix, see scores.cc

pl 13.jcn4
	- some ps output fixes
	- lilyponddefs.ps: some sane implemenations
	- removed (some) ghostscript internals

pl 13.jcn3
	- PostScript output version 0.0; do
	      export GS_LIB=$HOME/usr/src/lilypond/tex
	      export GS_FONTPATH=$HOME/usr/src/lilypond/mf/out
	      make -C mf pfa
	      lilypond -t example-1  # or try: lilypond -t twinkle :-)
	      gv lelie.ps
	- ps:
	  * lots of output fixes, chars, strings
	  * tex/lilyponddefs.ps: added rather braindead defs

pl 13.jcn2
	- tex/lily-ps-defs.ps (./tex?)
	- grand output rehack
	  * dropped {dimen,tex}.{cc,hh}
	  * {ps,tex} stuf to {Ps,Tex}_lookup
	  * init/table*.ly: added #parameters
	- ps fonts:
	  * ps-to-pfa.py generates valid type-3 fonts
	  * do: make -C mf pfa