@@ -26,11 +26,16 @@ Engraver::announce_element (Score_element_info i)
   daddy_grav_l()->announce_element (i);
 }
 
-
 void
 Engraver::typeset_element (Score_element*p)
 {
   daddy_grav_l()->typeset_element (p);
+}
+
+void
+Engraver::typeset_element (Graphical_lisp_element*p)
+{
+  daddy_grav_l ()->typeset_element (p);
 }
 
 Paper_def*
