@@ -9,10 +9,10 @@
 #ifndef ATOM_HH
 #define ATOM_HH
 
+#include "lily-guile.hh"
 #include "string.hh"
 #include "box.hh"
 #include "lily-proto.hh"
-
 
 /// a symbol which can be translated, and freely copied
 class Atom {
@@ -20,6 +20,7 @@ class Atom {
 public:
   String str_;
   String font_;
+  SCM lambda_;
   Box dim_;
 
   Offset offset () const;
