@@ -19,10 +19,12 @@
   */
 struct Score_element_info {
     Score_element * elem_l_;
+    Graphical_lisp_element * lisp_l_;
     Request*req_l_;
     Array<Engraver*> origin_grav_l_arr_;
 
     Score_element_info (Score_element*, Request*);
+    Score_element_info (Graphical_lisp_element*, Request*);
     Score_element_info();
 };
 
