@@ -10,6 +10,7 @@
 */
 
 #include <iostream.h>
+#include "lily-guile.hh"
 #include "notename-table.hh"
 #include "scalar.hh"
 #include "translation-property.hh"
@@ -195,6 +196,7 @@ yylex (YYSTYPE *s,  void * v_l)
 %token PT_T
 %token RELATIVE
 %token REMOVE
+%token SCHEME /* token vs typedef;  can't be named SCM */
 %token SCORE
 %token SCRIPT
 %token SHAPE
@@ -321,7 +323,17 @@ toplevel_expression:
 			Midi_def_identifier ($1, MIDI_IDENTIFIER);
 		THIS->lexer_p_->set_identifier ("$defaultmidi", id)
 	}
+	| embedded_scm { 
+	}
 	;
+
+embedded_scm:
+	SCHEME STRING ';' {
+	#ifdef HAVE_LIBGUILE
+		gh_eval_str ($2->ch_C ());
+	#endif
+		delete $2;
+	};
 
 check_version:
 	VERSION STRING ';'		{
